--- a/connect4/src/components/home/index.scss
+++ b/connect4/src/components/home/index.scss
@@ -1,8 +1,10 @@
 @import "../../assets/scss/abstracts.scss";
 
 .home{
+  width: 100%;
   height: 100%;
   display: flex;
+  padding: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
