Add emoji "✔" on each element of win line

--- a/connect4/src/assets/scss/abstracts/_variables.scss
+++ b/connect4/src/assets/scss/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $link-color: #1d3557;
 $text-color: #333333;
 $main-color: #669bbcff;
 $main-color-alpha: #457b9d;
-$main-color-beta: #F0F0D8;
+$main-color-beta: #eceff1;
 $color-player-1: #003049ff;
 $color-player-2: #780000ff;
 
