--- a/connect4/src/components/board/round/index.scss
+++ b/connect4/src/components/board/round/index.scss
@@ -14,12 +14,6 @@
         width: 100%;
         height: 100%;
         position: relative;
-        &.status-1{
-            background: $color-player-1;
-        }
-        &.status-2{
-            background: $color-player-2;
-        }
         &::before{
             content: "";
             display: block;
@@ -64,6 +58,33 @@
                 border: 1px solid rgba($white,.15);
             }
         }
-            
+        &::after{
+            content: "✔";
+            font-size: 3em;
+            color: rgba($white,.65);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+            display: none;
+        }
+        &.status-1{
+            background: $color-player-1;
+        }
+        &.status-2{
+            background: $color-player-2;
+        }
+        &.status-3{
+            background: $color-player-1;
+            &::after{
+                display: block;
+            }
+        }
+        &.status-4{
+            background: $color-player-2;
+            &::after{
+                display: block;
+            }
+        }
     }
 }
