--- a/connect4/src/assets/scss/abstracts/_variables.scss
+++ b/connect4/src/assets/scss/abstracts/_variables.scss
@@ -10,9 +10,10 @@ $font-script: 'Bangers', cursive;
 $link-color: #1d3557;
 
 $text-color: #333333;
-$main-color: #669bbcff;
-$main-color-alpha: #457b9d;
-$main-color-beta: #eceff1;
+$main-color: #203b4e;
+$background-color: #e0dbd8;
+$main-color-alpha: #4c758b;
+$main-color-beta: #c4c3be;
 $color-player-1: #003049ff;
 $color-player-2: #780000ff;
 
