--- a/connect4/src/assets/scss/bases/_elements.scss
+++ b/connect4/src/assets/scss/bases/_elements.scss
@@ -5,48 +5,36 @@
     font-weight: 700;
     font-size: 1.2em;
     text-transform: uppercase;
-    letter-spacing: .1em;
   
     text-align: center;  
   
     display: inline-block;
-    margin: 0 auto;
-    padding: 10px 20px;      
+    position: relative;
+    padding: .5em 4em 1em .5em;
 
     cursor: pointer;
-    border: 2px solid $main-color;
-    border-radius: 5px;
-  
-    background: linear-gradient(
-      180deg, 
-      $main-color 0,
-      $main-color 40%,
-      $main-color-alpha 60%,
-      $main-color-alpha 100%
-    );
-    box-shadow: 
-      3px 3px $grey, 
-      2px 2px $grey, 
-      1px 1px $grey, 
-      3px 3px 6px -1px $grey;
-    transition: all .1s ease-in-out;
+    border: 2px solid $color-player-2;
+    background-color: $color-player-2;
+    transition: all .15s ease;
 
-    &:focus{              
-        border-color: $link-color;                                                  
-        outline: none;
+    &::after{
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: 0; 
+      height: 0; 
+      border-left: .5em solid transparent;
+      border-right: .5em solid transparent;
+      border-top: .5em solid currentColor;
+      transform: rotate(-45deg) translate(.2em,0);
     }
     
-    &:active{
-        color: $very-light-grey;
-        box-shadow: 0 0 6px -1px $grey;
-        transform: translate(3px, 3px);
-        background: linear-gradient(
-          180deg,
-          $main-color-alpha 0,
-          $main-color-alpha 40%,
-          $main-color 60%,
-          $main-color 100%
-        );
+        
+    &:focus,
+    &:hover{
+      border-color: $text-color;
+      background-color: $text-color;
     }
 }
 
