--- a/connect4/src/components/board/index.scss
+++ b/connect4/src/components/board/index.scss
@@ -5,10 +5,22 @@
     padding: 0 25px;
     position: relative;
     .board-table{
-        padding: 10px;
-        border-radius: 10px;
-        border: 4px solid $main-color-alpha;
-        background: $main-color;
+        position: relative;
+        padding: 25px;
+        border: 5px solid darken($main-color-beta, 10%);
+        background: $main-color-beta;
+        &::after{
+            content: "";
+            position: absolute;
+            right: 5px;
+            bottom: 5px;
+            width: 0; 
+            height: 0; 
+            border-left: 30px solid transparent;
+            border-right: 30px solid transparent;
+            border-top: 30px solid darken($main-color-beta, 10%);
+            transform: translate(25px, 10px) rotate(-45deg);
+        }
     }
 }
 
