--- a/connect4/src/components/board/round/index.scss
+++ b/connect4/src/components/board/round/index.scss
@@ -5,8 +5,7 @@
     margin: 5px;
     aspect-ratio: 1 / 1;
     background: $white;
-    background: $main-color-beta;
-    border: 1px solid $main-color-alpha;
+    border: 1px solid darken(#c4c3be,.5);
     border-radius: 50%;
     overflow: hidden;
     box-shadow: inset 2px 2px 5px 2px rgba($black,.5);
