--- a/connect4/src/components/player-card/index.scss
+++ b/connect4/src/components/player-card/index.scss
@@ -2,20 +2,35 @@
 
 .player-card{
     position: relative;
-    background: $main-color;
-    border: 4px solid $main-color-alpha;
-    box-shadow: inset 0 0 0 2px rgba($black,.25);
-    border-radius: 10px;
+    background: $main-color-beta;
+    border: 4px solid $main-color-beta;
     text-align: center;
     padding: 20px;
+    margin-top: 50px;
+    * {
+        position: relative;
+        z-index: 2;
+    }
     h2{
         margin: 10px 0;
         color: $white;
         font-size: 2.5em;
-        font-family: $font-script;
-        letter-spacing: .075em;
+        font-weight: 900;
         text-transform: uppercase;
     }
+    &::after{
+        content: "";
+        position: absolute;
+        left: 15px;
+        top: 15px;
+        width: 0; 
+        height: 0; 
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        border-bottom: 20px solid currentColor;
+        transform: translate(-20px, -10px) rotate(-45deg);
+    }
+
     &::before{
         content: "";
         display: block;
@@ -32,7 +47,9 @@
         linear-gradient(309deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),
         linear-gradient(144deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),
         linear-gradient(92deg, hsl(214,0%,11%),hsl(214,0%,11%));
-        mix-blend-mode: overlay;
+        mix-blend-mode: difference;
         opacity: .75;
+        z-index: 1;
     }
+
 }
