--- a/connect4/src/components/board/index.scss
+++ b/connect4/src/components/board/index.scss
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 0 25px;
     position: relative;
+    overflow: hidden;
     .board-table{
         position: relative;
         padding: 25px;
